# grid-resilience-showcase

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/projects/-home-jary-redhat-git-grid-resilience-showcase/memory/: MEMORY.md  feedback_gitops_charts_alongside.md  feedback_gpu_recreate_strategy.md  feedback_kit_isaacsim_check_in.md  feedback_no_demo_mode.md  feedback_no_empty_scaffold.md  feedback_no_silent_deviations.md  project_cluster_prereqs.md  reference_kit_streaming_repo.md  reference_quay_registry.md
.claude/rules/: ai-compliance.md
.claude/skills/archive-changes/: SKILL.md
.claude/skills/consolidate-reviews/: SKILL.md
.claude/skills/last-changes/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/tech-debt/: SKILL.md
console/frontend/: .npmrc  Containerfile  api-proxy.conf  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
console/frontend/src/: App.tsx  main.tsx
console/frontend/src/types/: events.ts
data/images/: IMAGE_PROMPTS.md
data/scenarios/: ice_storm_piedmont.yaml
data/seed/: apply_schema.py  assets.json  cameras.json  crews.json  feeders.json  load_seed_data.py  schema.sql  segments.json  switches.json
docs/: deployment-guide.md  plan.md  review-consolidation.md  starter-prompt.md
infrastructure/cluster/: kafka-cluster.yaml  kafka-topics.yaml  kit-substation-build.yaml  namespaces.yaml  postgres-cluster.yaml
infrastructure/cluster/ai-workloads/: corrdiff-nim.yaml  cuopt.yaml  vllm-cosmos.yaml
infrastructure/gitops/applications/: ai-workloads.yaml  camera-simulator.yaml  console-backend.yaml  console-frontend.yaml  defect-detector.yaml  dispatch-optimizer.yaml  infra.yaml  kit-substation.yaml  operators.yaml  risk-engine.yaml  scenario-engine.yaml  weather-service.yaml
infrastructure/gitops/bootstrap/: root-application.yaml
infrastructure/gitops/projects/: grid-ops.yaml
infrastructure/helm/camera-simulator/: Chart.yaml  values.yaml
infrastructure/helm/console-backend/: Chart.yaml  values.yaml
infrastructure/helm/console-frontend/: Chart.yaml  values.yaml
infrastructure/helm/defect-detector/: Chart.yaml  values.yaml
infrastructure/helm/dispatch-optimizer/: Chart.yaml  values.yaml
infrastructure/helm/kit-substation/: Chart.yaml  values.yaml
infrastructure/helm/risk-engine/: Chart.yaml  values.yaml
infrastructure/helm/scenario-engine/: Chart.yaml  values.yaml
infrastructure/helm/weather-service/: Chart.yaml  values.yaml
infrastructure/operators/: amq-streams.yaml  crunchy-pgo.yaml
kit-substation/: ASSETS.md  Containerfile
kit-substation/extension/grid.resilience.data/: extension.toml
kit-substation/scripts/: convert_fbx_to_usd.py  open_scene.py
services/camera-simulator/: Containerfile  pyproject.toml
services/camera-simulator/camera_simulator/: app.py  publisher.py  settings.py
services/common/: pyproject.toml
services/common/grid_common/: events.py  kafka.py  logging.py  settings.py  tracing.py
services/console-backend/: Containerfile  pyproject.toml
services/console-backend/console_backend/: app.py  proxy.py  settings.py  sse.py  weather_overlay.py
services/defect-detector/: Containerfile  pyproject.toml
services/defect-detector/defect_detector/: app.py  consumer.py  detector.py  prompt.py  settings.py
services/dispatch-optimizer/: Containerfile  pyproject.toml
services/dispatch-optimizer/dispatch_optimizer/: app.py  consumer.py  guardrails.py  optimizer.py  settings.py  state.py
services/risk-engine/: Containerfile  pyproject.toml
services/risk-engine/risk_engine/: app.py  consumer.py  scoring.py  settings.py
services/scenario-engine/: Containerfile  pyproject.toml
services/scenario-engine/scenario_engine/: app.py  emitter.py  settings.py  state.py
services/weather-service/: Containerfile  pyproject.toml
services/weather-service/weather_service/: app.py  forecast.py  settings.py
tests/risk_engine/: test_scoring.py
tools/cosmos-transfer/: augment_images.py  config.yaml
tools/cosmos-validate/: validate_detection.py
tools/cuopt-validate/: test_cuopt_api.py
tools/earth2-prepare/: fetch_gfs_input.py
(+67 files in other folders)
