# This project was developed with assistance from AI tools.

[project]
name = "grid-common"
version = "0.1.0"
description = "Shared Python library for the Grid Resilience Operations Center"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "confluent-kafka>=2.6.0,<3.0",
    "structlog>=24.4.0,<26.0",
    "opentelemetry-api>=1.29.0,<2.0",
    "opentelemetry-sdk>=1.29.0,<2.0",
    "opentelemetry-exporter-otlp>=1.29.0,<2.0",
]

[build-system]
requires = ["setuptools>=75.0.0,<76.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
